# proyectos

Big Data & Data Engineering/01_Python avanzado/traficFines/: README.md  pyproject.toml  requirements.txt
Big Data & Data Engineering/01_Python avanzado/traficFines/notebooks/: validacion_paquete.ipynb
Big Data & Data Engineering/01_Python avanzado/traficFines/src/traficFines/: __init__.py  cache.py  madridFines.py
Big Data & Data Engineering/03_Arquitectura de datos/: README.md
Data Science & BI/: README.md
Data Science & BI/Credit scoring_SAS/: Credit Scoring_SAS.xml  README.md  em_save_VALIDATE.xlsx
Data Science & BI/SAS- Analisis de Series_ACP_AF_CLUSTER_ACS/: Trabajo_3_ACS.sas
Data Science & BI/SAS-Analisis de Series_ACP_AF_CLUSTER_ACS/: Trabajo_1_series.sas  Trabajo_2_ACP AF CLUSTER.sas
Data Science & BI/Sistema de recomendacion/: README.md
Data Science & BI/TFM/: README.md
Data Science & BI/TFM/TFM_Codigo/: README.md  (+2 more)
Data Science & BI/Webscraping+MySQL+PowerBI/: README.md
Data Science & BI/Webscrapping+MySQL+PowerBI/: Fotocasa_Webscrapping+MySQL.ipynb  viviendas_fotocasa.xlsx
TFM/TFM_Codigo/: Xinyuan_TFM_Python.py  Xinyuan_TFM_R.R  Xinyuan_TFM_SAS.xml
Tarea SQL/: xinyuan_trabajo_mysql_P1.sql
bigdata_data_engineering/: README.md
bigdata_data_engineering/mysql/: README.md  xinyuan_trabajo_mysql_p2.sql
data_science_bi/: README.md
data_science_bi/sas_analisis_de_series_acp_af_cluster_acs/: trabajo_2_acp_af_cluster.sas
data_science_bi/sas_credit_scoring/: README.md  credit_scoring_sas.xml
data_science_bi/tfm/: README.md
(+41 files in other folders)
