[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traficFines"
version = "0.1.0"
description = "Paquete para la gestión, análisis y visualización de multas de tráfico de Madrid con soporte de caché local."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
authors = [{ name = "Xinyuan" }]
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "matplotlib>=3.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "requests-mock>=1.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--maxfail=1 -ra --cov=src/traficFines --cov-report=term-missing"
testpaths = ["tests"]
